syntax = "proto3";

package main;

option go_package = "./proto";


message LoginReq {
  string account = 1;//账号
  string password = 2;//密码
  string ip_address = 3; //IP地址
  string os = 4; //操作系统
  string browser = 5; //浏览器

}

message loginResp {
  int64 id = 1;
  string userName = 2;
  string AccessToken = 3;
  repeated string ApiUrls = 4;

}

message InfoReq {
  int64 UserId = 1;
}

message MenuListTree {
  int64 id = 1;
  string name = 2;
  string icon = 3;
  int64 parent_id = 4;
  string path = 5;
  string vue_path = 6;
  string vue_component = 7;
  string vue_icon = 8;
  string vue_redirect = 9;
}

message InfoResp {
  string avatar = 1;
  string name = 2;
  repeated MenuListTree menuListTree = 3;
  repeated string BackgroundUrls = 4;
}

message ReSetPasswordReq {
  int64 id = 1;
  string update_by = 2;
}

message ReSetPasswordResp {
  string pong = 1;
}

// 添加用户信息表
message AddUserReq {
  int64 id = 1; //编号
  string user_name = 2; //用户名
  string nick_name = 3; //昵称
  string avatar = 4; //头像
  string password = 5; //密码
  string salt = 6; //加密盐
  string email = 7; //邮箱
  string mobile = 8; //手机号
  int32 user_status = 9; //帐号状态（0正常 1停用）
  int64 dept_id = 10; //部门id
  string remark = 11; //备注信息
  repeated int64 PostIds = 12; //岗位ids
  string create_by = 13; //创建者
}

message AddUserResp {
  string pong = 1;
}

// 删除用户信息表
message DeleteUserReq {
  repeated int64 ids = 1;
}

message DeleteUserResp {
  string pong = 1;
}

// 更新用户信息表
message UpdateUserReq {
  int64 id = 1; //编号
  string user_name = 2; //用户名
  string nick_name = 3; //昵称
  string avatar = 4; //头像
  string password = 5; //密码
  string salt = 6; //加密盐
  string email = 7; //邮箱
  string mobile = 8; //手机号
  int32 user_status = 9; //帐号状态（0正常 1停用）
  int64 dept_id = 10; //部门id
  string remark = 11; //备注信息
  repeated int64 PostIds = 12; //岗位ids
  string update_by = 13; //更新者
}

message UpdateUserResp {
  string pong = 1;
}

// 更新用户信息表状态
message UpdateUserStatusReq {
  repeated int64 ids = 1; //编号
  int32 user_status = 2; //帐号状态（0正常 1停用）
  string update_by = 3; //更新者

}

message UpdateUserStatusResp {
  string pong = 1;
}

// 查询用户信息表详情
message QueryUserDetailReq {
  int64 id = 1;
}

message QueryUserDetailResp {
  int64 id = 1; //编号
  string user_name = 2; //用户名
  string nick_name = 3; //昵称
  string avatar = 4; //头像
  string email = 7; //邮箱
  string mobile = 8; //手机号
  int32 user_status = 9; //帐号状态（0正常 1停用）
  int64 dept_id = 10; //部门id
  string remark = 11; //备注信息
  int32 is_deleted = 12; //是否删除  0：否  1：是
  string login_time = 13; //登录时间
  string login_ip = 14; //登录ip
  string login_os = 15; //登录os
  string login_browser = 16; //登录浏览器
  string create_by = 17; //创建者
  string create_time = 18; //创建时间
  string update_by = 19; //更新者
  string update_time = 20; //更新时间
  repeated int64 PostIds = 21; //岗位ids

}

// 分页查询用户信息表列表
message QueryUserListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int64 dept_id = 3; //部门id
  string email = 4; //邮箱
  string mobile = 5; //手机号
  string nick_name = 6; //昵称
  int32 user_status = 7; //帐号状态（0正常 1停用）

}

message UserListData {
  int64 id = 1; //编号
  string user_name = 2; //用户名
  string nick_name = 3; //昵称
  string avatar = 4; //头像
  string email = 7; //邮箱
  string mobile = 8; //手机号
  int32 user_status = 9; //帐号状态（0正常 1停用）
  int64 dept_id = 10; //部门id
  string remark = 11; //备注信息
  int32 is_deleted = 12; //是否删除  0：否  1：是
  string login_time = 13; //登录时间
  string login_ip = 14; //登录ip
  string login_os = 15; //登录os
  string login_browser = 16; //登录浏览器
  string create_by = 17; //创建者
  string create_time = 18; //创建时间
  string update_by = 19; //更新者
  string update_time = 20; //更新时间


}

message QueryUserListResp {
  int64 total = 1;
  repeated  UserListData list = 2;
}

message UpdateUserRoleListReq {
  int64 userId = 1;
  repeated int64 roleIds = 2;
}

message UpdateUserRoleListResp {
  string pong = 1;
}
message QueryUserRoleListReq {
  int64 current = 1;
  int64 pageSize = 2;
  int64 userId = 3;
}

message RoleData {
  int64 id = 1; //编号
  string role_name = 2; //角色名称
  string role_key = 3; //权限字符
  int32 role_status = 4; //角色状态
  int32 role_sort = 5; //角色排序
  int32 data_scope = 6; //数据权限
  int32 is_deleted = 7; //是否删除  0：否  1：是
  int32 is_admin = 8; //是否超级管理员:  0：否  1：是
  string remark = 9; //备注
  string create_by = 10; //创建者
  string create_time = 11; //创建时间
  string update_by = 12; //更新者
  string update_time = 13; //更新时间


}
message QueryUserRoleListResp {
  repeated RoleData list = 1;
  repeated int64 RoleIds = 2;
  int64 total = 3;
}

message QueryDeptAndPostListReq {

}

message QueryDeptAndPostListResp {
  repeated DeptData dept_list_data = 1;
  repeated PostData post_list_data = 2;
}

message DeptData {
  int64 id = 1; //编号
  string dept_name = 2; //部门名称
  int32 dept_status = 3; //部门状态
  int32 dept_sort = 4; //部门排序
  int64 parent_id = 5; //上级机构ID，一级机构为0
  string leader = 6; //负责人
  string phone = 7; //电话号码
  string email = 8; //邮箱
  string remark = 9; //备注信息
  int32 is_deleted = 10; //是否删除  0：否  1：是
  repeated int64 parent_ids = 11; //上级机构IDs，一级机构为0
  string create_by = 12; //创建者
  string create_time = 13; //创建时间
  string update_by = 14; //更新者
  string update_time = 15; //更新时间

}

message PostData {
  int64 id = 1; //岗位id
  string post_name = 2; //岗位名称
  string post_code = 3; //岗位编码
  int32 post_status = 4; //岗位状态
  int32 post_sort = 5; //岗位排序
  string remark = 6; //备注信息
  int32 is_deleted = 7; //是否删除  0：否  1：是
  string create_by = 8; //创建者
  string create_time = 9; //创建时间
  string update_by = 10; //更新者
  string update_time = 11; //更新时间

}

// 用户信息表
service UserService {
  // 用户登录
  rpc Login(LoginReq) returns(loginResp);
  // 获取用户个人信息
  rpc UserInfo(InfoReq) returns(InfoResp);
  // 重置用户密码
  rpc ReSetPassword(ReSetPasswordReq) returns(ReSetPasswordResp);
  // 添加用户信息表
  rpc AddUser(AddUserReq) returns (AddUserResp){}
  // 删除用户信息表
  rpc DeleteUser(DeleteUserReq) returns (DeleteUserResp){}
  // 更新用户信息表
  rpc UpdateUser(UpdateUserReq) returns (UpdateUserResp){}
  // 更新用户信息表状态
  rpc UpdateUserStatus(UpdateUserStatusReq) returns (UpdateUserStatusResp){}
  // 查询用户信息表详情
  rpc QueryUserDetail(QueryUserDetailReq) returns (QueryUserDetailResp){}
  // 查询用户信息表列表
  rpc QueryUserList(QueryUserListReq) returns (QueryUserListResp){}

  //查询用户与角色的关联
  rpc QueryUserRoleList(QueryUserRoleListReq) returns(QueryUserRoleListResp);
  //更新用户与角色的关联
  rpc UpdateUserRoleList(UpdateUserRoleListReq) returns(UpdateUserRoleListResp);

  //查询所有部门和岗位
  rpc QueryDeptAndPostList(QueryDeptAndPostListReq) returns(QueryDeptAndPostListResp);
}
